Implement importing OFX transactions

--- a/src/index.html
+++ b/src/index.html
@@ -30,5 +30,8 @@
 <button>Import</button>
 </form>
 
+<h2>OFX Transactions</h2>
+<div hx-get="/ofx/transactions" hx-trigger="load"></div>
+
 </body>
 </html>
